// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`binary left 'a' conditional success tests AST to match snapshot 1`] = `"a"`;

exports[`binary left 'a+a' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary left 'a + a' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary left 'a + b' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "+",
  "b",
]
`;

exports[`binary left 'a + b+c' conditional success tests AST to match snapshot 1`] = `
[
  [
    "a",
    "+",
    "b",
  ],
  "+",
  "c",
]
`;

exports[`binary left 'a + b + c' conditional success tests AST to match snapshot 1`] = `
[
  [
    "a",
    "+",
    "b",
  ],
  "+",
  "c",
]
`;

exports[`binary left 'ab+' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`binary left '+ab' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a' or 'b' or 'c'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`binary left 'bcaba' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`binary right 'a' conditional success tests AST to match snapshot 1`] = `"a"`;

exports[`binary right 'a+a' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary right 'a + a' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary right 'a + b' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "+",
  "b",
]
`;

exports[`binary right 'a + b+c' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "+",
  [
    "b",
    "+",
    "c",
  ],
]
`;

exports[`binary right 'a + b + c' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "+",
  [
    "b",
    "+",
    "c",
  ],
]
`;

exports[`binary right 'ab+' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`binary right '+ab' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a' or 'b' or 'c'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`binary right 'bcaba' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`prefix 'a' conditional success tests AST to match snapshot 1`] = `"a"`;

exports[`prefix '-a' conditional success tests AST to match snapshot 1`] = `
[
  "-",
  "a",
]
`;

exports[`prefix '--a' conditional success tests AST to match snapshot 1`] = `
[
  "-",
  [
    "-",
    "a",
  ],
]
`;

exports[`prefix 'a - b' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`prefix 'ab-' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`prefix '-ab' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`prefix 'bcaba' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'-'",
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`postfix 'a' conditional success tests AST to match snapshot 1`] = `"a"`;

exports[`postfix 'a-' conditional success tests AST to match snapshot 1`] = `
[
  "-",
  "a",
]
`;

exports[`postfix 'a--' conditional success tests AST to match snapshot 1`] = `
[
  "-",
  [
    "-",
    "a",
  ],
]
`;

exports[`postfix 'a- b' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'-'",
    "eof",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`postfix 'ab-' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'-'",
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`postfix '-ab' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`postfix 'bcaba' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`function 'a' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`function 'a()' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": {
    "column": 3,
    "index": 2,
    "line": 1,
  },
}
`;

exports[`function 'a(b)' conditional success tests AST to match snapshot 1`] = `
[
  "a",
  "b",
]
`;

exports[`function 'a (b)' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`function '(b)' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`function 'a b' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`function 'foo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
